update-manager (1:0.141) UNRELEASED; urgency=low

  * UpdateManager/backend/__init__.py:
    - switch to aptdaemon as install backend by default
  * DistUpgrade/DistUpgradeController.py:
   - use pockets from DistUpgrade.cfg instead of hard-coding them
  * tests/test_sources_list.py:
    - update tests

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200

update-manager (1:0.140) maverick; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - remove gobuntu-desktop from the removal blacklist
  * DistUpgrade/DistUpgradeController.py:
    - start apport only, do not modify any conffile (all versions
      of apport we upgrade from support this now)
  * UpdateManager/UpdateManager.py:
    - fix crash when format string has the wrong number of arguments
      (LP: #569469)
    - fix minor UI resize issue (LP: #572228)
  * DistUpgrade/DistUpgrade.cfg:
    - add ubuntu-netbook (LP: #574279)
  * UpdateManager/Core/MetaRelease.py:
    - add looking for a "UpgradeBroken" tag that contains a reason string
      if the user should not be allowed to perform a release upgrade
  * UpdateManager/UpdateManager.py, do-release-upgrade:
    - honor "UpgradeBroken" flag and error in this case
  * updated to support lucid to maverick upgrades

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 10:48:27 +0200

update-manager (1:0.134.6) lucid; urgency=low

  * fix FTBFS caused by /usr/bin/check-new-release being a symlink
    instead of a real file

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Apr 2010 09:31:33 +0200

update-manager (1:0.134.5) lucid; urgency=low

  * DistUpgrade/DistUpgradeAufs.py:
    - fix crash in aufs (--sandbox mode)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Apr 2010 20:07:14 +0200

update-manager (1:0.134.4) lucid; urgency=low

  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/DistUpgrade.cfg.hardy:
    - do not enable apport anymore
  * DistUpgrade/DistUpgradeViewGtk.py: