@@ -2,12 +2,13 @@
 
 import unittest
 
+import logging
 import os
 import os.path
 import sys
 import time
-sys.path.insert(0, "../")
 
+sys.path.insert(0, "../")
 from UpdateManager.Core.MetaRelease import *
 from UpdateManager.Core.DistUpgradeFetcherCore import *
 
@@ -44,6 +45,24 @@ class TestMetaReleaseCore(unittest.TestCase):
             self.assert_(new_dist.name == next,
                          "New dist name for %s is '%s', but expected '%s''" % (current, new_dist.name, next))
 
+    def test_url_downloadable(self):
+        from UpdateManager.Core.utils import url_downloadable
+        logging.debug("proxy 1")
+        os.environ["http_proxy"] = "http://localhost:3128/"
+        self.assertTrue(url_downloadable("http://www.ubuntu.com/news",
+                        logging.debug))
+        logging.debug("proxy 2")
+        os.environ["http_proxy"] = "http://localhost:3128"
+        self.assertTrue(url_downloadable("http://www.ubuntu.com/news",
+                        logging.debug))
+        logging.debug("no proxy")
+        del os.environ["http_proxy"]
+        self.assertTrue(url_downloadable("http://www.ubuntu.com/news",
+                        logging.debug))
+
 if __name__ == '__main__':
+    if len(sys.argv) > 1 and sys.argv[1] == "-v":
+        logging.basicConfig(level=logging.DEBUG)
     unittest.main()
+    
 
