@@ -6,6 +6,8 @@ update-manager (1:0.141) UNRELEASED; urgency=low
    - use pockets from DistUpgrade.cfg instead of hard-coding them
   * tests/test_sources_list.py:
     - update tests
+  * UpdateManager/Core/utils.py:
+    - fix url_downloadable and add tests
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200
 
